2005-09-16 23:09  hjanuschka

	* ChangeLog: [no log message]

2005-09-15 22:33  hjanuschka

	* ChangeLog: [no log message]

2005-09-15 00:01  hjanuschka

	* ChangeLog, src/check.c, src/client/agent.c: debug in data_lib
	  added and removed agent: off by two :-) *fG* malloc error
	  producing magic char's  (fixed)

2005-09-14 00:11  hjanuschka

	* ChangeLog, bartlby.cfg, src/client/agent.c, src/client/cmd.c,
	  src/client/portier.c: ip_list moved to .cfg	  allowed_ips load
	  limit moved to cfg	 agent_load_limit

	  portier now also uses ip list to verify ip of connector

	  portier: passive check without plg args fixed

2005-09-13 22:46  hjanuschka

	* include/bartlby.h: STATE_UNKOWN Added (for plugins)

2005-09-13 21:43  hjanuschka

	* include/bartlby.h, src/bartlby.c, src/daemon.c: human readable
	  release code name REL_NAME fixed printf() in shutdown daemon *fg*

2005-09-13 21:30  hjanuschka

	* bartlby.startup: startup script	useses BARTLBY_HOME env to
	  determe base dir (defaults to /usr/local/bartlby)

2005-09-13 21:29  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/bartlby.c,
	  src/daemon.c, src/libs/Makefile, src/libs/mysql.c: daemon:
	  pidfile, remove pidfile at end mysql.c: fixed 2 segfaults under
	  _MALLOC_CHECK=2

2005-09-11 23:42  hjanuschka

	* src/: check.c, global.c, sched.c: log files are now archived by
	  Y.M.d

2005-09-11 11:20  hjanuschka

	* ChangeLog, bartlby.cfg, src/check.c, src/trigger.c: logging issue
	  ;-) ui now can display log in a nice layout ;-)

2005-09-09 21:26  hjanuschka

	* src/client/cmd.c: compile warnings fixed (cmd.c)

2005-09-09 21:24  hjanuschka

	* src/client/cmd.c: littel cmd tool for working with passive
	  services

2005-09-09 21:23  hjanuschka

	* ChangeLog, src/Makefile, src/client/Makefile,
	  src/client/portier.c: portier: added get_passive cmd added a
	  little dummy passive portier query tool (wich can set passive
	  states and recieve passiv service info

2005-09-08 00:36  hjanuschka
