@@ -1,0 +1,45 @@
+/* $Id$ */
+/* ----------------------------------------------------------------------- *
+ *
+ *   Copyright 2005 Helmut Januschka - All Rights Reserved
+ *
+ *   This program is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU General Public License as published by
+ *   the Free Software Foundation, Inc., 675 Mass Ave, Cambridge MA 02139,
+ *   USA; either version 2 of the License, or (at your option) any later
+ *   version; incorporated herein by reference.
+ *
+ * ----------------------------------------------------------------------- */
+/*
+$Revision$
+$Source$
+
+
+$Log$
+Revision 1.1  2005/09/18 01:33:54  hjanuschka
+*** empty log message ***
+
+
+*/
+
+#include <dlfcn.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <unistd.h>
+#include <string.h>
+#include <malloc.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
+#include <signal.h>
+#include <sys/types.h>
+#include <time.h>
+#include <sys/wait.h>  
+#include <unistd.h>
+
+#include <bartlby.h>
+
+int replication_go(char * cfgfile, void * shm_addr, void * SOHandle) {
+	//_log("FIXME: replication");
+	
+	return 1;
+}
