@@ -1,3 +1,7 @@
+2005-09-18 02:56  hjanuschka
+
+	* ChangeLog: [no log message]
+
 2005-09-16 23:09  hjanuschka
 
 	* ChangeLog: [no log message]
